Integrate jaxb-ri 2.3.3-b02, jaxws-ri 2.3.3-b01, jaxrpc-ri 1.1.6 (#55)
* Integrate jaxb-ri 2.3.3-b02, jaxws-ri 2.3.3-b01, jaxrpc-ri 1.1.6
Avoid (some) split packages with jaxws-ri
Update build plugins
Remove obsolete code

Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>